<resources>
    <string name="app_name">CalenderApp</string>
    <string name="user">User</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome2">Welcome!</string>
    <string name="tue">TUE</string>
    <string name="june_2023">june 2023</string>
    <string name="last_month">Last Month</string>
    <string name="next_month">Next Month</string>
    <string name="mon">MON</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="new_task">New Task</string>
    <string name="back">Back</string>
    <string name="to_do">To-Do</string>
    <string name="log_out">Log Out</string>
    <string name="extra_activity">EXTRA ACTIVITY WOULD GO HERE</string>
    <string name="go_back">Go Back</string>
</resources>