<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_one"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="157dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="349dp"
        android:contentDescription="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calenderuser" />

    <EditText
        android:id="@+id/userN"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="98dp"
        android:autoText="false"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:password="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#202136"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/passW"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="98dp"
        android:autoText="false"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        android:minHeight="48dp"
        android:outlineProvider="none"
        android:password="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#202136"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userN"
        tools:ignore="Deprecated" />

    <Button
        android:id="@+id/LoginButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="162dp"
        android:layout_height="82dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="add"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passW"
        app:strokeColor="#202136"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="175dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>